k8s/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: airflow
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: api
      protocol: TCP
    - name: console
      port: 9001
      targetPort: console
      protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: airflow
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - name: console
      port: 9001
      targetPort: console
      protocol: TCP
  selector:
    app: minio
